Update execute configuration to download files on build rather than on start